# Job-Application-Automation

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  go.work  project_dev_init_prompt.txt  pyproject.toml
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: jobs.py
backend/app/assets/workday_companies/: raw_workday_domains.json  workday_companies_config.json  workday_unresolved_domains.json
backend/app/core/: config.py  constants.py  logger.py  patterns.py
backend/app/schemas/: email_schema.py  resume_schemas.py  scraped_job.py
backend/app/services/email_scrapers/: email_folder_name.py  email_scraper.py
backend/app/services/job_scrapers/: base_scraper.py  job_scraper.py  null_scraper.py  scraper_config.py  scraper_factory.py
backend/app/services/resume_updaters/: exceptions.py  resume_builder_prompt.py  resume_constants.py  resume_manager.py  resume_section_enum.py  resume_updater.py  resume_validator.py  validation_error_enum.py
backend/app/services/resume_updators/: resume_builder_prompt.py  resume_manager.py  resume_updator.py  resume_validator.py
backend/app/services/scraper/: ats_scraper.py  base_ats_scraper.py  base_scraper.py  job_scraper.py  job_scraper_factory.py  scraped_job_validator.py
backend/app/services/scrapers/: job_scraper.py  null_scraper.py  scraper_factory.py
backend/app/utils/: html_utils.py
backend/tests/: test_logging.py
backend/tests/services/job_scrapers/: test_scraper_queue.py
backend/tests/test_data/: test_resume.tex
backend/tests/utils/: test_html_utils.py
(+84 files in other folders)
